--- a/RestassureProj/pom.xml
+++ b/RestassureProj/pom.xml
@@ -23,12 +23,18 @@
         <configuration>
         
           
-          <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
+
         </configuration>
       </plugin>
-      
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>11</source>
+                <target>11</target>
+            </configuration>
+        </plugin>
+
     </plugins>
   </build>
  
