--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ nb-configuration.xml
 *.lst
 *.lst
 composeMail/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+*.class
